//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service OrgInviteService {
  // Create an invitation
  rpc Create(OrgInviteServiceCreateRequest) returns (OrgInviteServiceCreateResponse);
}

message OrgInviteServiceCreateRequest {
  string organization_id = 1 [(validate.rules).string.uuid = true];
  string receiver_email = 2 [(validate.rules).string.email = true];
}

message OrgInviteServiceCreateResponse {
  OrgInviteItem result = 1;
}

message OrgInviteItem {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string receiver_email = 3;
  string organization_id = 4;
  string sender_id = 5;
  string status = 6;
}
